--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
+    "@svgr/webpack": "^5.5.0",
     "@types/node": "^14.11.2",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
