--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "dayjs": "^1.10.4",
     "gl-matrix": "^3.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
