--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
   "version": "0.0.1",
   "license": "MIT",
   "private": true,
+  "main": "main.js",
   "scripts": {
     "build": "webpack --config build/webpack.config.js --mode production",
     "dev": "webpack serve --config build/webpack.config.js",
-    "build-webpack-config": "tsc build/webpack.config.ts --esModuleInterop"
+    "deve": "tsc main.ts && electron .",
+    "build-webpack-config": "tsc build/webpack.config.ts --esModuleInterop",
+    "buildes": "esbuild ./src/index.tsx --bundle --outfile=out.js"
   },
   "dependencies": {
     "axios": "^0.21.1",
     "dayjs": "^1.10.4",
+    "electron": "^13.1.4",
+    "esbuild": "^0.11.20",
     "gl-matrix": "^3.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
