--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "rxjs": "^7.2.0",
+    "sqlite3": "^5.0.2"
   },
   "devDependencies": {
     "@svgr/webpack": "^5.5.0",
