--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "redux": "^4.1.0",
     "rxjs": "^7.2.0",
     "sqlite3": "^5.0.2"
   },
