--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/react-dom": "^17.0.1",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.6",
+    "@types/sqlite3": "^3.1.7",
     "css-loader": "^5.0.2",
     "file-loader": "^6.1.0",
     "html-webpack-plugin": "^5.1.0",
