--- a/package.json
+++ b/package.json
@@ -12,18 +12,22 @@
     "buildes": "esbuild ./src/index.tsx --bundle --outfile=out.js"
   },
   "dependencies": {
+    "@types/sqlite3": "^3.1.7",
+    "@vscode/sqlite3": "^4.0.12",
     "axios": "^0.21.1",
     "dayjs": "^1.10.4",
     "electron": "^13.1.4",
     "esbuild": "^0.11.20",
     "gl-matrix": "^3.3.0",
+    "pretty-ms": "^7.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.1.0",
     "rxjs": "^7.2.0",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "5.0.1",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@svgr/webpack": "^5.5.0",
@@ -32,7 +36,6 @@
     "@types/react-dom": "^17.0.1",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.6",
-    "@types/sqlite3": "^3.1.7",
     "css-loader": "^5.0.2",
     "file-loader": "^6.1.0",
     "html-webpack-plugin": "^5.1.0",
