--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "pretty-ms": "^7.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.5",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "redux": "^4.1.0",
     "rxjs": "^7.2.0",
     "sqlite3": "5.0.1",
     "winston": "^3.3.3"
