--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vscode/sqlite3": "^4.0.12",
     "axios": "^0.21.1",
     "dayjs": "^1.10.4",
+    "dexie": "^3.0.3",
     "electron": "^13.1.4",
     "esbuild": "^0.11.20",
     "gl-matrix": "^3.3.0",
@@ -46,7 +47,7 @@
     "source-map-loader": "^2.0.1",
     "style-loader": "^2.0.0",
     "ts-loader": "^8.0.4",
-    "typescript": "^4.0.3",
+    "typescript": "^4.5.1-rc",
     "typescript-plugin-css-modules": "^3.2.0",
     "url-loader": "^4.1.0",
     "webpack": "^5.22.0",
